--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "exit 0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "publishConfig": {
+    "@prabasajee:registry": "https://npm.pkg.github.com"
+  }
 }
